model User has been created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,14 @@ spring.output.ansi.enabled=ALWAYS
 
 #database config
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#driver do banco de dados
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
+#localização de criação do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/todosimple?createDatabaseIfNotExist=true
+#senha e nome de usuário para acessar o banco
 spring.datasource.username=root
 spring.datasource.password=root
+#modo de atualização do banco de dados
 spring.jpa.hibernate.ddl-auto=update
+#mostrar as inserções no bando de dados
 spring.jpa.show-sql=true
