--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.output.ansi.enabled=ALWAYS
 #database config
 
 #driver do banco de dados
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver - É usável?
 #localização de criação do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/todosimple?createDatabaseIfNotExist=true
 #senha e nome de usuário para acessar o banco
