--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 #mostrar as inserções no bando de dados
 spring.jpa.show-sql=true
+
+server.error.include-exception=true
